# aoye-beijing-mobile-test-platform

./: README.md  pyproject.toml  requirements.txt
config/: models.yaml  tracks.yaml
config/tracks/: audio.yaml  image.yaml  industry.yaml  multimodal.yaml  text.yaml  video.yaml
docs/: DESIGN.md
scripts/: docker-build.sh  quick_test.sh  run.sh  setup.sh
src/: __init__.py
src/api/: __init__.py  server.py
src/engine/: __init__.py  generator.py  runner.py
src/utils/: __init__.py  config_loader.py  metrics.py  report_generator.py
tests/: test_all.py
web/: index.html
web/css/: style.css
web/js/: main.js
