[project]
name = "beijing-mobile-test-platform"
version = "2.1.0"
description = "北京移动Token模型聚合平台模拟测试系统"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "aiohttp>=3.11.0",
    "pyyaml>=6.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "jinja2>=3.1.0",
    "reportlab>=4.2.0",
    "pillow>=11.0.0",
    "rich>=13.0",
    "aiosqlite>=0.20.0",
    "sse-starlette>=2.2.0",
]

[project.scripts]
start = "src.api.server:main"
